--- a/.github/workflows/build_exe.yml
+++ b/.github/workflows/build_exe.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4 # 升级至 v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5 # 升级至 v5
       with:
         python-version: '3.10'
 
@@ -22,16 +22,17 @@ jobs:
       shell: bash
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install pandas openpyxl pyinstaller
 
     - name: Build EXE with PyInstaller
       shell: bash
       run: |
-        # 使用 --console 模式，因为您的代码中有 print 和 input 交互
+        # 针对 Antigravity 脚本进行打包
         pyinstaller --onefile --console main.py
 
     - name: Upload Artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4 # 核心修复：升级至 v4 解决报错
       with:
-        name: ClaimAuditTool_v1
+        name: ClaimAuditTool_2026
         path: dist/main.exe
+        compression-level: 9 # 优化压缩
